# image-generation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.agent_docs/: sdxl-pipeline.md
src/image_gen/: __init__.py  cli.py  embeddings.py  lora.py  metadata.py  pipeline.py  prompt_encoding.py  schedulers.py
